--- a/packages/editor-sample/package.json
+++ b/packages/editor-sample/package.json
@@ -24,11 +24,14 @@
     "@usewaypoint/block-text": "^0.0.6",
     "@usewaypoint/document-core": "^0.0.6",
     "@usewaypoint/email-builder": "^0.0.8",
+    "axios": "^1.7.9",
+    "express": "^4.21.2",
     "highlight.js": "^11.9.0",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.0.2",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
   },
