--- a/packages/editor-sample/package.json
+++ b/packages/editor-sample/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.2",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
